# Magic_II

./: ANDROID_GUIDE.md  CMakeLists.txt  README.md  magic  magic_world  makefile  makefile.android  metsys_engine
android-dummy/: local.properties  settings.gradle  sync_native_lib.sh
android-dummy/app/: build.gradle  proguard-rules.pro
android-dummy/app/src/main/: AndroidManifest.xml
android-dummy/app/src/main/res/values/: strings.xml  themes.xml
build-android/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
src/: main.c  npc.c  ui.c  util.c  util.h
